fix bug header make width white space + replace overflow menu icon

--- a/src/resource/scss/_header.scss
+++ b/src/resource/scss/_header.scss
@@ -1,6 +1,9 @@
 .header {
   background: $cl-main-black;
   padding: 0 24px;
+  width: 100vw;
+  overflow: hidden;
+  position: relative;
 
   &--home {
     padding: 12px 24px;
